- Edited Twitter Page - Added Facebook API Keys - Added new Strings - Update fbconnect.jar

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="twitter">Twitter</string>
     <string name="ok">OK</string>
     <string name="not_responding">Network Host not responding.</string>
+	<string name="successful_twitter">Posted Successfully.</string>
 </resources>
