--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="ok">OK</string>
     <string name="not_responding">Network Host not responding.</string>
 	<string name="successful_twitter">Posted Successfully.</string>
+	<string name="retrieving">Retrieving Data...</string>
 </resources>
