--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">BestSGDeals</string>
+    <string name="app_name">ILoveDeals</string>
     <string name="input_all_data">Please input your Username and Password.</string>
     <string name="wrong_info">Wrong Username and Password combination.</string>
     <string name="twitter">Twitter</string>
